tests/paczka1/small_fuzzy/40271062.err
Error in line 11: F7Htj S180 100,0
Error in line 16: A185 A568 83,64
